[gd_scene load_steps=16 format=3 uid="uid://cpcjomy4hfq0d"]

[ext_resource type="Script" path="res://components/boss/eye_attack.gd" id="1_0kger"]
[ext_resource type="Texture2D" uid="uid://d36qlxhcg6ggl" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-1.png" id="1_idoy4"]
[ext_resource type="Texture2D" uid="uid://bnixni1nxtexs" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-2.png" id="2_p4jnx"]
[ext_resource type="Texture2D" uid="uid://dk35nusb70cnw" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-3.png" id="3_owap1"]
[ext_resource type="Texture2D" uid="uid://2ta1r2uqv6g3" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-4.png" id="4_mupxh"]
[ext_resource type="Texture2D" uid="uid://bxd3lvugiy6tk" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-5.png" id="5_1oov4"]
[ext_resource type="Texture2D" uid="uid://juigpmljuouh" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-6.png" id="6_sjay5"]
[ext_resource type="Texture2D" uid="uid://c3qvk3lmv5a31" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-7.png" id="7_o8ald"]
[ext_resource type="Texture2D" uid="uid://sjtj0xxnpxw7" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-8.png" id="8_r4c5y"]
[ext_resource type="Texture2D" uid="uid://cc2lg485nr7ly" path="res://art/2d/enemies/boss/Phase 2. VFX/Eye opening VFX/boss-9.png" id="9_ydeip"]
[ext_resource type="AudioStream" uid="uid://bwij45bgymtkd" path="res://art/sfx/KnifeThrow_boss.wav" id="11_x2lrp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gxotn"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("1_idoy4")
}, {
"duration": 0.5,
"texture": ExtResource("2_p4jnx")
}, {
"duration": 0.5,
"texture": ExtResource("3_owap1")
}, {
"duration": 0.5,
"texture": ExtResource("4_mupxh")
}, {
"duration": 0.5,
"texture": ExtResource("5_1oov4")
}, {
"duration": 0.5,
"texture": ExtResource("6_sjay5")
}, {
"duration": 0.5,
"texture": ExtResource("7_o8ald")
}, {
"duration": 0.5,
"texture": ExtResource("8_r4c5y")
}, {
"duration": 0.5,
"texture": ExtResource("9_ydeip")
}],
"loop": false,
"name": &"eye_attack",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hkw44"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EyeAttackVFX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EyeAttackVFX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7msle"]
resource_name = "attack"
length = 0.334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EyeAttackVFX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_projectile"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EyeAttackVFX:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihpgr"]
_data = {
"RESET": SubResource("Animation_hkw44"),
"attack": SubResource("Animation_7msle")
}

[node name="EyeAttack" type="Node2D"]
script = ExtResource("1_0kger")

[node name="EyeAttackVFX" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(3.8147e-06, 0)
scale = Vector2(0.285, 0.285)
sprite_frames = SubResource("SpriteFrames_gxotn")
animation = &"eye_attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ihpgr")
}
speed_scale = 0.6

[node name="pivot" type="Node2D" parent="."]

[node name="Marker" type="Marker2D" parent="pivot"]

[node name="Marker2" type="Marker2D" parent="pivot"]
rotation = 2.0944

[node name="Marker3" type="Marker2D" parent="pivot"]
rotation = -2.0944

[node name="RayCast2D" type="RayCast2D" parent="pivot"]
rotation = 1.5708
target_position = Vector2(15, 0)
collision_mask = 0

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_x2lrp")
volume_db = -13.19
bus = &"Effects"
